--- a/BeamStatica/BeamStatica.csproj
+++ b/BeamStatica/BeamStatica.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Materials\Concrete.cs" />
     <Compile Include="Materials\Intefaces\IMaterial.cs" />
     <Compile Include="Materials\Material.cs" />
+    <Compile Include="Materials\Steel.cs" />
     <Compile Include="Nodes\FixedNode.cs" />
     <Compile Include="Nodes\FreeNode.cs" />
     <Compile Include="Nodes\Hinge.cs" />
@@ -134,6 +135,7 @@
     <Compile Include="Results\OnSpan\ShearResult.cs" />
     <Compile Include="Sections\Additional\Interfaces\IPoint.cs" />
     <Compile Include="Sections\Additional\Point.cs" />
+    <Compile Include="Sections\IBeamSection.cs" />
     <Compile Include="Sections\Interfaces\IArea.cs" />
     <Compile Include="Sections\Interfaces\ISection.cs" />
     <Compile Include="Spans\Interfaces\ILengthProvider.cs" />
