--- a/Build-IT_Tools/Build_IT_Tools.csproj
+++ b/Build-IT_Tools/Build_IT_Tools.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>Build_IT_Tools</RootNamespace>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
 </Project>
