--- a/Build_IT_ScriptInterpreterTests/Build_IT_ScriptInterpreterTests.csproj
+++ b/Build_IT_ScriptInterpreterTests/Build_IT_ScriptInterpreterTests.csproj
@@ -9,20 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CoreCLR-NCalc" Version="2.2.51" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
-    <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
     <PackageReference Include="NUnit" Version="3.11.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.11.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.12.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="UnitTests\Loads\PointLoads\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\BuildIt_BeamStatica\Build_IT_BeamStatica.csproj" />
+    <ProjectReference Include="..\ScriptInterpreter\Build_IT_ScriptInterpreter.csproj" />
   </ItemGroup>
 
 </Project>
