--- a/ScriptInterpreter/Build_IT_ScriptInterpreter.csproj
+++ b/ScriptInterpreter/Build_IT_ScriptInterpreter.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CoreCLR-NCalc" Version="2.2.51" />
+  </ItemGroup>
 
 </Project>
