--- a/Tools/Tools.csproj
+++ b/Tools/Tools.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbbreviationAttribute.cs" />
+    <Compile Include="ParseExtended.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitAttribute.cs" />
   </ItemGroup>
