--- a/ScriptInterpreter/Build_IT_ScriptInterpreter.csproj
+++ b/ScriptInterpreter/Build_IT_ScriptInterpreter.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="CoreCLR-NCalc" Version="2.2.51" />
     <PackageReference Include="MathNet.Numerics" Version="4.7.0" />
   </ItemGroup>
