--- a/WebTest/appsettings.json
+++ b/WebTest/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "server=localhost; database=KPK_scripts; Integrated Security=SSPI;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
