--- a/Build_IT_Web/Build_IT_Web.csproj
+++ b/Build_IT_Web/Build_IT_Web.csproj
@@ -10,6 +10,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190106200417_SeedDatabase.cs" />
+    <Compile Remove="Migrations\20190106200417_SeedDatabase.Designer.cs" />
+    <Compile Remove="Migrations\20190106233252_AddedParameterLink.cs" />
+    <Compile Remove="Migrations\20190106233252_AddedParameterLink.Designer.cs" />
+    <Compile Remove="Migrations\20190114192527_ManyToManyRelation.cs" />
+    <Compile Remove="Migrations\20190114192527_ManyToManyRelation.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
