--- a/Build_IT_Web/Build_IT_Web.csproj
+++ b/Build_IT_Web/Build_IT_Web.csproj
@@ -19,6 +19,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\app\common\app-error.ts" />
+    <None Remove="ClientApp\app\common\errors\app-error-handler.ts" />
+    <None Remove="ClientApp\app\common\errors\bad-input-error.ts" />
+    <None Remove="ClientApp\app\common\errors\not-found-error.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ClientApp\app\common\validators\" />
     <Folder Include="ClientApp\app\directives\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
@@ -35,6 +43,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ScriptInterpreter\Build_IT_ScriptInterpreter.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\app\common\errors\app-error-handler.ts" />
+    <TypeScriptCompile Include="ClientApp\app\common\errors\bad-input-error.ts" />
+    <TypeScriptCompile Include="ClientApp\app\common\errors\not-found-error.ts" />
+    <TypeScriptCompile Include="ClientApp\app\common\errors\app-error.ts" />
   </ItemGroup>
 
 </Project>
