--- a/Build_IT_FrameStaticaTests/Build_IT_FrameStaticaTests.csproj
+++ b/Build_IT_FrameStaticaTests/Build_IT_FrameStaticaTests.csproj
@@ -4,8 +4,6 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
-
-    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BuildIt_BeamStatica\Build_IT_BeamStatica.csproj" />
+    <ProjectReference Include="..\Build_IT_FrameStatica\Build_IT_FrameStatica.csproj" />
   </ItemGroup>
 
 </Project>
