--- a/Build-IT_Tools/Build_IT_CommonTools.csproj
+++ b/Build-IT_Tools/Build_IT_CommonTools.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>Build_IT_CommonTools</RootNamespace>
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
