--- a/Build_IT_DataAccess/Properties/launchSettings.json
+++ b/Build_IT_DataAccess/Properties/launchSettings.json
@@ -19,8 +19,8 @@
     },
     "Build_IT_DataAccess": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchBrowser": false,
+      "launchUrl": "",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
