--- a/Build_IT_Web/appsettings.json
+++ b/Build_IT_Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Default": "server=localhost; database=KPK_scripts; Integrated Security=SSPI;"
+    "Scripts": "server=localhost; database=Build_IT_Scripts; Integrated Security=SSPI;",
+    "DeadLoads": "server=localhost; database=Build_IT_DeadLoads; Integrated Security=SSPI;"
   },
   "Logging": {
     "LogLevel": {
