--- a/Build_IT_Web/Build_IT_Web.csproj
+++ b/Build_IT_Web/Build_IT_Web.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <None Remove="ClientApp\app\common\app-error.ts" />
     <None Remove="ClientApp\app\common\errors\app-error-handler.ts" />
+    <None Remove="ClientApp\app\common\errors\app-error-state-matcher.ts" />
     <None Remove="ClientApp\app\common\errors\bad-input-error.ts" />
     <None Remove="ClientApp\app\common\errors\not-found-error.ts" />
   </ItemGroup>
@@ -71,6 +72,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\app\common\errors\app-error-state-matcher.ts" />
     <TypeScriptCompile Include="ClientApp\app\common\errors\app-error-handler.ts" />
     <TypeScriptCompile Include="ClientApp\app\common\errors\bad-input-error.ts" />
     <TypeScriptCompile Include="ClientApp\app\common\errors\not-found-error.ts" />
