--- a/Build_IT_ScriptInterpreterTests/Build_IT_ScriptInterpreterTests.csproj
+++ b/Build_IT_ScriptInterpreterTests/Build_IT_ScriptInterpreterTests.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="CoreCLR-NCalc" Version="2.2.51" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+    <PackageReference Include="Moq" Version="4.11.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
     <PackageReference Include="NUnit" Version="3.11.0" />
@@ -19,6 +20,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Build_IT_ScriptInterpreter\Build_IT_ScriptInterpreter.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="UnitTests\Expressions\Functions\Matrixes\" />
   </ItemGroup>
 
 </Project>
