--- a/Build_IT_Web/appsettings.json
+++ b/Build_IT_Web/appsettings.json
@@ -8,5 +8,12 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "PhotoSettings": {
+    "MaxBytes": 5242880,
+    "AcceptedFileTypes": [ ".jpg", ".jpeg", ".png" ]
+  },
+  "DataAccess": {
+    "Project": "Build_IT_DataAccess"
+  }
 }
