--- a/Build_IT_Web/appsettings.json
+++ b/Build_IT_Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "Scripts": "server=localhost; database=Build_IT_Scripts; Integrated Security=SSPI;",
-    "DeadLoads": "server=localhost; database=Build_IT_DeadLoads; Integrated Security=SSPI;"
+    "Scripts": "Data Source=SQL6007.site4now.net;Initial Catalog=DB_A49B69_BuildIT;User Id=DB_A49B69_BuildIT_admin;Password=quackquack24;",
+    "DeadLoads": "Data Source=SQL6007.site4now.net;Initial Catalog=DB_A49B69_BuildIT;User Id=DB_A49B69_BuildIT_admin;Password=quackquack24;"
   },
   "Logging": {
     "LogLevel": {
