--- a/Build_IT_Web/Build_IT_Web.csproj
+++ b/Build_IT_Web/Build_IT_Web.csproj
@@ -5,7 +5,7 @@
     <Authors>Konrad Kania</Authors>
     <Version>1.0.1</Version>
     <Company></Company>
-    <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>3.4.5</TypeScriptToolsVersion>
     <Product />
     <AssemblyName>Build_IT_Web</AssemblyName>
     <RootNamespace>Build_IT_Web</RootNamespace>
