--- a/Build_IT_Web/angular.json
+++ b/Build_IT_Web/angular.json
@@ -25,7 +25,8 @@
             "styles": [
               "ClientApp/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           },
           "configurations": {
             "production": {
@@ -46,6 +47,7 @@
               "buildOptimizer": true
             }
           }
+
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
