--- a/Build_IT_Web/package.json
+++ b/Build_IT_Web/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "@ngx-translate/core": "^11.0.1",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
@@ -33,13 +34,13 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.800.2",
+    "@angular-devkit/build-angular": "^0.800.6",
     "@angular/cli": "^8.0.2",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
