--- a/WebTraining/WebTraining/appsettings.json
+++ b/WebTraining/WebTraining/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=WebTraining;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=WebTraining;Trusted_Connection=True;MultipleActiveResultSets=true",
   },
 
 
