--- a/Build_IT_Application/Build_IT_Application.csproj
+++ b/Build_IT_Application/Build_IT_Application.csproj
@@ -8,6 +8,8 @@
     <Folder Include="DeadLoads\Categories\Commands\" />
     <Folder Include="DeadLoads\Materials\Commands\" />
     <Folder Include="DeadLoads\Subcategories\Commands\" />
+    <Folder Include="ScriptInterpreter\Calculations\" />
+    <Folder Include="ScriptInterpreter\Translations\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +20,15 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Build_IT_DataAccess\Build_IT_DataAccess.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Hosting.Abstractions">
+      <HintPath>..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.hosting.abstractions\2.2.0\lib\netstandard2.0\Microsoft.AspNetCore.Hosting.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNetCore.Http.Features">
+      <HintPath>..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.http.features\2.2.0\lib\netstandard2.0\Microsoft.AspNetCore.Http.Features.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
