--- a/Build_IT_WebTest/Build_IT_WebTest.csproj
+++ b/Build_IT_WebTest/Build_IT_WebTest.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\Build_IT_Web_TestHelper\Build_IT_Web_TestHelper.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="IntegrationTests\" />
+  </ItemGroup>
+
 </Project>
