--- a/Build_IT_CommonTools/Build_IT_CommonTools.csproj
+++ b/Build_IT_CommonTools/Build_IT_CommonTools.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MathNet.Numerics" Version="4.7.0" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.8.4" />
   </ItemGroup>
 
 </Project>
