--- a/Build_IT_Web/NLog.config
+++ b/Build_IT_Web/NLog.config
@@ -3,7 +3,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Info"
-      internalLogFile="c:\temp\internal-nlog.txt">
+      internalLogFile="${basedir}/Logs/internal-nlog.txt">
 
   <!-- enable asp.net core layout renderers -->
   <extensions>
@@ -13,24 +13,24 @@
   <!-- the targets to write to -->
   <targets>
     <!-- write logs to file  -->
-    <target xsi:type="File" 
+    <!--<target xsi:type="File" 
             name="allfile" 
             fileName="c:\temp\build-it-all-${shortdate}.log"
-            layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
+            layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />-->
 
     <!-- another file log, only own logs. Uses some ASP.NET core renderers -->
     <target xsi:type="File" 
             name="ownFile-web"
-            fileName="c:\temp\build-it-own-${shortdate}.log"
-            layout="${longdate}-${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger} ${message} ${exception:format=tostring} url: ${aspnet-request-url} action: ${aspnet-mvc-action}" />
+            fileName="${basedir}/Logs/build-it-own-${shortdate}.log"
+            layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
   </targets>
 
   <!-- rules to map from logger name to target -->
   <rules>
     <!--All logs, including from Microsoft-->
-    <logger name="*" 
+    <!--<logger name="*" 
             minlevel="Trace" 
-            writeTo="allfile" />
+            writeTo="allfile" />-->
 
     <!--Skip non-critical Microsoft logs and so log only own logs-->
     <logger name="Microsoft.*" 
