--- a/Build_IT_Data/Build_IT_Data.csproj
+++ b/Build_IT_Data/Build_IT_Data.csproj
@@ -8,4 +8,10 @@
     <ProjectReference Include="..\Build_IT_CommonTools\Build_IT_CommonTools.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Identity.Stores">
+      <HintPath>..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.identity.stores\2.2.0\lib\netstandard2.0\Microsoft.Extensions.Identity.Stores.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
