--- a/Build_IT_Web/appsettings.json
+++ b/Build_IT_Web/appsettings.json
@@ -1,7 +1,13 @@
 {
   "ConnectionStrings": {
     "Scripts": "Data Source=SQL6007.site4now.net;Initial Catalog=DB_A49B69_BuildIT;User Id=DB_A49B69_BuildIT_admin;Password=quackquack24;",
-    "DeadLoads": "Data Source=SQL6007.site4now.net;Initial Catalog=DB_A49B69_BuildIT;User Id=DB_A49B69_BuildIT_admin;Password=quackquack24;"
+    "DeadLoads": "Data Source=SQL6007.site4now.net;Initial Catalog=DB_A49B69_BuildIT;User Id=DB_A49B69_BuildIT_admin;Password=quackquack24;",
+    "Application": "Data Source=SQL6007.site4now.net;Initial Catalog=DB_A49B69_BuildIT;User Id=DB_A49B69_BuildIT_admin;Password=quackquack24;"
+  },
+  "TestConnectionStrings": {
+    "Scripts": "server=localhost; database=Build_IT_Scripts; Integrated Security=SSPI;",
+    "DeadLoads": "server=localhost; database=Build_IT_DeadLoads; Integrated Security=SSPI;",
+    "Application": "server=localhost; database=Build_IT_Application; Integrated Security=SSPI;"
   },
   "Logging": {
     "LogLevel": {
@@ -9,16 +15,20 @@
       "Microsoft": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "PhotoSettings": {
-    "MaxBytes": 5242880,
-    "AcceptedFileTypes": [ ".jpg", ".jpeg", ".png" ]
-  },
-  "DataAccess": {
-    "Project": "Build_IT_DataAccess"
-  },
-  "TestConnectionStrings": {
-    "Scripts": "server=localhost; database=Build_IT_Scripts; Integrated Security=SSPI;",
-    "DeadLoads": "server=localhost; database=Build_IT_DeadLoads; Integrated Security=SSPI;"
+  "Auth": {
+    "Jwt": {
+      "Issuer": "http://localhost:8200/",
+      "Audience": "http://localhost:8200/",
+      "Key": "---tu-wstaw-unikatowy-klucz---",
+      "TokenExpirationInMinutes": 86400
+    },
+    "AllowedHosts": "*",
+    "PhotoSettings": {
+      "MaxBytes": 5242880,
+      "AcceptedFileTypes": [ ".jpg", ".jpeg", ".png" ]
+    },
+    "DataAccess": {
+      "Project": "Build_IT_DataAccess"
+    }
   }
 }
