--- a/Build_IT_Web/Build_IT_Web.csproj
+++ b/Build_IT_Web/Build_IT_Web.csproj
@@ -41,11 +41,16 @@
     <None Remove="ClientApp\app\common\errors\bad-input-error.ts" />
     <None Remove="ClientApp\app\common\errors\not-found-error.ts" />
     <None Remove="ClientApp\app\directives\element-select.directive.ts" />
+    <None Remove="ClientApp\app\models\token.response.ts" />
+    <None Remove="ClientApp\app\models\user.ts" />
     <None Remove="ClientApp\app\modules\script-interpreter\models\api\create-script-command.ts" />
     <None Remove="ClientApp\app\modules\script-interpreter\models\enums\language.ts" />
     <None Remove="ClientApp\app\modules\script-interpreter\services\parameter-translation.service.ts" />
     <None Remove="ClientApp\app\modules\script-interpreter\services\script-translation.service.ts" />
     <None Remove="ClientApp\app\modules\script-interpreter\services\translations\value-option-translation.service.ts" />
+    <None Remove="ClientApp\app\services\auth.interceptor.ts" />
+    <None Remove="ClientApp\app\services\auth.response.interceptor.ts" />
+    <None Remove="ClientApp\app\services\auth.service.ts" />
     <None Remove="ClientApp\app\services\configuration.service.ts" />
     <None Remove="ClientApp\app\services\db-keys.ts" />
     <None Remove="ClientApp\app\services\local-store-manager.service.ts" />
@@ -64,7 +69,6 @@
   <ItemGroup>
     <Folder Include="ClientApp\app\common\validators\" />
     <Folder Include="ClientApp\app\modules\loads\components\wind-loads-components\" />
-    <Folder Include="ClientApp\app\models\" />
     <Folder Include="wwwroot\clientapp\uploads\" />
   </ItemGroup>
 
@@ -94,14 +98,19 @@
     <TypeScriptCompile Include="ClientApp\app\common\errors\not-found-error.ts" />
     <TypeScriptCompile Include="ClientApp\app\common\errors\app-error.ts" />
     <TypeScriptCompile Include="ClientApp\app\directives\element-select.directive.ts" />
+    <TypeScriptCompile Include="ClientApp\app\models\user.ts" />
+    <TypeScriptCompile Include="ClientApp\app\models\token.response.ts" />
     <TypeScriptCompile Include="ClientApp\app\modules\script-interpreter\models\api\scripts\create-script-command.ts" />
     <TypeScriptCompile Include="ClientApp\app\modules\script-interpreter\models\enums\language.ts" />
     <TypeScriptCompile Include="ClientApp\app\modules\script-interpreter\services\translations\value-option-translation.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\modules\script-interpreter\services\translations\parameter-translation.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\modules\script-interpreter\services\translations\script-translation.service.ts" />
+    <TypeScriptCompile Include="ClientApp\app\services\auth.interceptor.ts" />
+    <TypeScriptCompile Include="ClientApp\app\services\auth.response.interceptor.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\configuration.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\db-keys.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\local-store-manager.service.ts" />
+    <TypeScriptCompile Include="ClientApp\app\services\auth.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\search.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\translation.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\utilities.ts" />
