--- a/Build_IT_FrameStaticaTests/Build_IT_FrameStaticaTests.csproj
+++ b/Build_IT_FrameStaticaTests/Build_IT_FrameStaticaTests.csproj
@@ -9,18 +9,63 @@
   <ItemGroup>
     <None Remove="FrameData\2019.09.30-03_0-4.csv" />
     <None Remove="FrameData\2019.09.30-03_1-5.csv" />
+    <None Remove="FrameData\2019.09.30-04_0-1.csv" />
+    <None Remove="FrameData\2019.09.30-04_1-6.csv" />
+    <None Remove="FrameData\2019.09.30-05_0-8.csv" />
+    <None Remove="FrameData\2019.09.30-05_1-9.csv" />
+    <None Remove="FrameData\2019.09.30-05_2-10.csv" />
+    <None Remove="FrameData\2019.09.30-06_0-14.csv" />
+    <None Remove="FrameData\2019.09.30-06_1-15.csv" />
+    <None Remove="FrameData\2019.09.30-06_2-28.csv" />
+    <None Remove="FrameData\2019.09.30-06_3-17.csv" />
+    <None Remove="FrameData\2019.09.30-06_4-18.csv" />
+    <None Remove="FrameData\2019.09.30-06_5-29.csv" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="FrameData\2019.09.30-04_0-1.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FrameData\2019.09.30-04_1-6.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="FrameData\2019.09.30-03_0-4.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="FrameData\2019.09.30-03_1-5.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="FrameData\2019.09.30-05_0-8.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FrameData\2019.09.30-05_1-9.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FrameData\2019.09.30-05_2-10.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FrameData\2019.09.30-06_1-15.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FrameData\2019.09.30-06_2-28.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FrameData\2019.09.30-06_3-17.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FrameData\2019.09.30-06_4-18.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FrameData\2019.09.30-06_5-29.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
     <PackageReference Include="Moq" Version="4.13.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
@@ -29,6 +74,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Build_IT_FrameStatica\Build_IT_FrameStatica.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="FrameData\2019.09.30-06_0-14.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
