--- a/Build_IT_FrameStaticaTests/Build_IT_FrameStaticaTests.csproj
+++ b/Build_IT_FrameStaticaTests/Build_IT_FrameStaticaTests.csproj
@@ -20,6 +20,15 @@
     <None Remove="FrameData\2019.09.30-06_3-17.csv" />
     <None Remove="FrameData\2019.09.30-06_4-18.csv" />
     <None Remove="FrameData\2019.09.30-06_5-29.csv" />
+    <None Remove="FrameData\2019.09.30-07_0-19.csv" />
+    <None Remove="FrameData\2019.09.30-07_1-20.csv" />
+    <None Remove="FrameData\2019.09.30-07_2-21.csv" />
+    <None Remove="FrameData\2019.10.01-01_0-23.csv" />
+    <None Remove="FrameData\2019.10.01-01_1-22.csv" />
+    <None Remove="FrameData\2019.10.01-01_2-24.csv" />
+    <None Remove="FrameData\2019.10.02-01_0-25.csv" />
+    <None Remove="FrameData\2019.10.02-01_1-27.csv" />
+    <None Remove="FrameData\2019.10.02-01_2-26.csv" />
   </ItemGroup>
 
   <ItemGroup>
@@ -59,6 +68,30 @@
     <Content Include="FrameData\2019.09.30-06_5-29.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="FrameData\2019.09.30-07_0-19.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FrameData\2019.09.30-07_1-20.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FrameData\2019.09.30-07_2-21.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FrameData\2019.10.01-01_0-23.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FrameData\2019.10.01-01_1-22.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FrameData\2019.10.01-01_2-24.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FrameData\2019.10.02-01_1-27.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FrameData\2019.10.02-01_2-26.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
@@ -78,6 +111,12 @@
 
   <ItemGroup>
     <Content Include="FrameData\2019.09.30-06_0-14.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="FrameData\2019.10.02-01_0-25.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
