--- a/Build_IT_Desktop/Build_IT_Desktop.csproj
+++ b/Build_IT_Desktop/Build_IT_Desktop.csproj
@@ -7,28 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Resources\Images\Exit.png" />
-    <None Remove="Resources\Images\Maximize.png" />
-    <None Remove="Resources\Images\Minimize.png" />
-    <None Remove="Resources\Images\Restore.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="Resources\Images\Exit.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\Images\Maximize.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\Images\Minimize.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\Images\Restore.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Prism.Unity" Version="7.2.0.1367" />
@@ -36,7 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Build_IT_CalculationModule\Build_IT_CalculationModule.csproj" />
     <ProjectReference Include="..\Build_IT_Data\Build_IT_Data.csproj" />
+    <ProjectReference Include="..\Build_IT_Infrastructure\Build_IT_Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
