--- a/Build_IT_SoftwareArchitecture/Build_IT_SoftwareArchitecture.csproj
+++ b/Build_IT_SoftwareArchitecture/Build_IT_SoftwareArchitecture.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <None Remove="Documents\Decisions\0001-SYS-record-architecture-decisions.md" />
     <None Remove="Documents\Decisions\0002-SYS-migrate-to-core3.md" />
+    <None Remove="Documents\Decisions\0003-SYS-divide-desktop-app-to-modules.md" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Documents\Decisions\0003-SYS-divide-desktop-app-to-modules.md">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Documents\Decisions\0002-SYS-migrate-to-core3.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
