--- a/Build_IT_Web/Build_IT_Web.csproj
+++ b/Build_IT_Web/Build_IT_Web.csproj
@@ -10,6 +10,7 @@
 
     <!-- Set this to true if you enable server-side prerendering -->
     <BuildServerSideRenderer>false</BuildServerSideRenderer>
+    <ApplicationIcon>favicon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -70,6 +71,7 @@
     <None Remove="ClientApp\src\assets\locale\de.json" />
     <None Remove="ClientApp\src\assets\locale\en.json" />
     <None Remove="ClientApp\src\assets\locale\pl.json" />
+    <None Remove="favicon.ico" />
   </ItemGroup>
 
   <ItemGroup>
@@ -103,6 +105,12 @@
   <ItemGroup>
     <Folder Include="ClientApp\src\app\common\validators\" />
     <Folder Include="ClientApp\src\app\modules\loads\components\wind-loads-components\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="favicon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
